erDiagram
    USERS ||--o{ COURSES : owns
    COURSES ||--|{ FOLDERS : organizes
    FOLDERS ||--o{ FILES : contains
    FILES ||--o{ FILE_VERSIONS : versions
    FILE_VERSIONS ||--o{ INGESTION_RUNS : processed_by
    INGESTION_RUNS ||--o{ CHUNKS : produces

    COURSES ||--o{ CONVERSATIONS : has
    CONVERSATIONS ||--o{ MESSAGES : contains

    COURSES ||--o{ MILESTONES : plans

    COURSES ||--o{ FLASHCARD_DECKS : has
    FLASHCARD_DECKS ||--o{ FLASHCARDS : contains
    FLASHCARDS ||--o{ FLASHCARD_REVIEWS : records

    USERS {
        uuid id PK
        varchar email UK
        text hashed_password
        varchar display_name
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    COURSES {
        uuid id PK
        uuid user_id FK
        varchar code
        varchar name
        smallint calendar_year
        smallint study_year
        smallint semester_no
        smallint teaching_weeks
        text goal_text
        varchar status
        timestamptz created_at
        timestamptz updated_at
    }

    FOLDERS {
        uuid id PK
        uuid course_id FK
        varchar name
        boolean is_root
        integer sort_order
        timestamptz created_at
        timestamptz updated_at
    }

    FILES {
        uuid id PK
        uuid folder_id FK
        varchar display_name
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    FILE_VERSIONS {
        uuid id PK
        uuid file_id FK
        integer version_no
        varchar original_filename
        text storage_key UK
        char sha256
        varchar mime_type
        bigint size_bytes
        integer page_count
        varchar status
        text error_message
        boolean is_current
        timestamptz uploaded_at
        timestamptz indexed_at
    }

    INGESTION_RUNS {
        uuid id PK
        uuid file_version_id FK
        varchar status
        varchar chunker_version
        varchar embedding_model
        smallint embedding_dim
        boolean is_active
        timestamptz started_at
        timestamptz completed_at
        text error_message
    }

    CHUNKS {
        uuid id PK
        uuid ingestion_run_id FK
        integer chunk_index
        integer page_start
        integer page_end
        text heading
        text content
        integer word_count
        integer token_count
        vector embedding
        timestamptz created_at
    }

    CONVERSATIONS {
        uuid id PK
        uuid course_id FK
        varchar title
        timestamptz created_at
        timestamptz updated_at
        timestamptz archived_at
    }

    MESSAGES {
        uuid id PK
        uuid conversation_id FK
        integer sequence_no
        varchar role
        text content
        boolean grounded
        smallint used_chunks
        varchar model_name
        jsonb scope_snapshot
        jsonb citations
        timestamptz created_at
    }

    MILESTONES {
        uuid id PK
        uuid course_id FK
        integer position
        smallint week_no
        varchar title
        text description
        varchar item_type
        varchar status
        timestamptz due_at
        jsonb source_snapshot
        timestamptz created_at
        timestamptz updated_at
    }

    FLASHCARD_DECKS {
        uuid id PK
        uuid course_id FK
        varchar title
        text description
        timestamptz created_at
        timestamptz updated_at
        timestamptz archived_at
    }

    FLASHCARDS {
        uuid id PK
        uuid deck_id FK
        integer position
        text question
        text answer
        jsonb source_snapshot
        timestamptz created_at
        timestamptz updated_at
    }

    FLASHCARD_REVIEWS {
        uuid id PK
        uuid flashcard_id FK
        smallint rating
        timestamptz reviewed_at
        timestamptz next_review_at
        integer interval_days
        numeric ease_factor
    }
